kuber/app-deploy/users_dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-app
  labels:
    app: users-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-app
  template:
    metadata:
      labels:
        app: users-app
    spec:
      containers:
        - name: users-app
          image: comrademaper/zis_otus_hw4:latest 
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
