kuber/app-deploy/users_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels:
    app: users-app
spec:
  selector:
    app: users-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
